# molgw

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMKL.cmake  prepare_sourcecode.cmake  readme.md
docs/: CMakeLists.txt
src/: CMakeLists.txt  basis_path.f90.in  git_sha.f90.in
